Промежуточное сохранение работы 1. Реализование добавление и удаление программ 2. Реализован основной интерфейс

--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Scripts\IniFile.cs" />
+    <Compile Include="Scripts\Main.cs" />
+    <Compile Include="Scripts\WLink.cs" />
     <Page Include="CMessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -123,7 +126,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Scripts\" />
+    <Resource Include="Images\Link.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
