Рефакторинг, мелкие правки

--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -155,5 +155,8 @@
   <ItemGroup>
     <Resource Include="Images\Edit.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Folder.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
